# AvunaHTTPD

./: .gitignore  CMakeLists.txt  Makefile  Makefile.dep  README.md
AvunaHTTPD/: .cproject  .project  main.cfg
AvunaHTTPD/Debug/: .gitignore  AvunaHTTPD  makefile  objects.mk  sources.mk
AvunaHTTPD/Debug/src/: accept.d  cache.d  fcgi.d  http.d  http2.d  main.d  mime.d  oqueue.d  subdir.mk  tls.d  vhost.d  work.d  work2.d
AvunaHTTPD/src/: accept.c  accept.h  cache.c  cache.h  collection.c  collection.h  config.c  fcgi.c  fcgi.h  globals.h  http.c  http.h  http2.h  log.c  log.h  main.c  mime.h  oqueue.c  oqueue.h  override.h  streams.c  tls.c  tls.h  util.c  util.h  version.h  vhost.c  vhost.h  work.c  work.h  xstring.c  xstring.h
cfg-example/: main.cfg  mime.txt
include/avuna/: buffer.h  cache.h  chunked.h  config.h  connection.h  globals.h  hash.h  headers.h  hpack.h  http.h  http2.h  http_util.h  list.h  llist.h  log.h  mime.h  module.h  network.h  pmem.h  pmem_hooks.h  provider.h  queue.h  server.h  streams.h  string.h  tls.h  util.h  version.h  vhost.h
modules/fcgi/src/: fcgi.c  fcgi.h  fcgi_protocol.c  fcgi_protocol.h  fcgi_provider.c
modules/htdocs/include/mod_htdocs/: gzip.h  util.h  vhost_htdocs.h
modules/htdocs/src/: gzip.c  util.c  vhost_htdocs.c
modules/mount/src/: vhost_mount.c  vhost_mount.h
modules/redirect/src/: vhost_redirect.c  vhost_redirect.h
modules/reverse_proxy/src/: reverse_network.c  reverse_network.h  vhost_reverse_proxy.c  vhost_reverse_proxy.h
src/: accept.c  accept.h  buffer.c  buffer.h  cache.c  cache.h  chunked.c  config.c  config.h  connection.c  fcgi.c  fcgi.h  fcgi_connection_manager.c  fcgi_connection_manager.h  globals.h  hash.c  hash.h  headers.c  headers.h  hpack.c  hpack.h  http.c  http.h  http2.c  http2.h  http2_network.c  http2_network.h  http2_pipeline.c  http2_pipeline.h  http_network.c  http_network.h  http_pipeline.c  http_pipeline.h  http_util.c  huffman.c  huffman.h  list.c  list.h  llist.c  llist.h  (+35 more)
